--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "esnext",
-    "target": "esnext",
+    "module": "es6",
+    "target": "es2015",
     "types": [],
     // For nodejs:
     // "lib": ["esnext"],
@@ -40,6 +40,7 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
+    "esModuleInterop": true,
   },
   "include": ["src"]
 }
